--- a/index.html
+++ b/index.html
@@ -23,9 +23,44 @@
         <h2>Sobre Mim</h2>
         <p>Olá, eu sou [Seu Nome] e este é o meu site pessoal. Aqui você pode aprender mais sobre mim e meu trabalho.</p>
     </section>
-    
+    <main>
+        <h2>Conheça As Aventuras da Jú</h2>
+        <div id="conteudo-home">
+          <div class="regiao">
+            <a href="norte.html" title="Dubai">
+              <img src="img/dubai.jpg.jpg" width="239" />
+            </a>
+            <p>Norte</p>
+          </div>
+          <div class="regiao">
+            <a href="nordeste.html" title="Região Nordeste">
+              <img src="imagens/nordeste-jalapao.jpg" width="239" />
+            </a>
+            <p>Nordeste</p>
+          </div>
+          <div class="regiao">
+            <a href="centro-oeste.html" title="Região Centro-Oeste">
+              <img src="imagens/centro-oeste-bonito.jpg" width="239" />
+            </a>
+            <p>Centro-Oeste</p>
+          </div>
+          <div class="regiao">
+            <a href="sudeste.html" title="Região Sudeste">
+              <img src="imagens/sudeste-buzios.jpg" width="239" />
+            </a>
+            <p>Sudeste</p>
+          </div>
+          <div class="regiao">
+            <a href="sul.html" title="Região Sul">
+              <img src="./imagens/sul-florianopolis.jpg" width="239" />
+            </a>
+            <p>Sul</p>
+          </div>
+        </div>
+      </main>
     <footer>
         <p>&copy; 2023 Meu Site Pessoal</p>
+        
     </footer>
 </body>
 </html>
