--- a/index.html
+++ b/index.html
@@ -8,15 +8,20 @@
 </head>
 <body>
     <header>
+        <div id="topo">
+          <img src="img/logo.jpg" alt="" width="150px" />
+        </div>
         <h1>Meu Site Pessoal</h1>
         <nav>
             <ul>
                 <li><a href="#">Início</a></li>
                 <li><a href="#">Sobre Mim</a></li>
-                <li><a href="#">Portfólio</a></li>
+                <li><a href="Viagens.html">Viagens</a></li>
                 <li><a href="#">Contato</a></li>
             </ul>
         </nav>
+
+      
     </header>
     
     <section class="content">
