--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Site Pessoal</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
     <header>
-        <div id="topo">
-          <img src="img/logo.jpg" alt="" width="150px" />
+        <div id="topo"></div>
+          <img src="img/logo.jpg" alt="" width="180px" />
         </div>
-        <h1>Meu Site Pessoal</h1>
+        <h1>Juliana Orsini</h1>
         <nav>
             <ul>
                 <li><a href="#">Início</a></li>
@@ -20,14 +20,16 @@
                 <li><a href="#">Contato</a></li>
             </ul>
         </nav>
-
-      
     </header>
     
     <section class="content">
-        <h2>Sobre Mim</h2>
-        <p>Olá, eu sou [Seu Nome] e este é o meu site pessoal. Aqui você pode aprender mais sobre mim e meu trabalho.</p>
-    </section>
+        <h2>Quem é Juliana Orsini</h2>
+        <p>Este é o meu site pessoal. Aqui você irá conhecer um pouco mais da minha vida pessoal e profissional.</p>
+        <p>Meu nome é Juliana, tenho 39 anos, sou casada a 23 anos, tenho um filho de 20 anos</p>
+        <p>Sou formada em Administração de Empresa, tenho MBA em Gestão de Vendas e Trade Marketing</p>
+        <p>Minha maior paixão é viajar, conhecer novas culturas, gastronomia local ,amo montar meus roteiros e organizar minhas viagens, gosto também de cozinhar, costurar.</p>
+        <p>Meus pais são separados, tenho 02 irmãos, sou a mais velhas dos irmãos, amo muito estar com minha família, que é o meu bem mais precioso.</p>
+      </section>
     <main>
         <h2>Conheça As Aventuras da Jú</h2>
         <div id="conteudo-home">
