--- a/index.html
+++ b/index.html
@@ -1,74 +1,45 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Meu Site Pessoal</title>
-    <link rel="stylesheet" href="estilo.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./estilo.css" />
+  </head>
+  <body>
     <header>
-        <div id="topo"></div>
-          <img src="img/logo.jpg" alt="" width="180px" />
-        </div>
+      <div id="topo">
         <h1>Juliana Orsini</h1>
-        <nav>
-            <ul>
-                <li><a href="#">Início</a></li>
-                <li><a href="#">Sobre Mim</a></li>
-                <li><a href="Viagens.html">Viagens</a></li>
-                <li><a href="#">Contato</a></li>
-            </ul>
-        </nav>
+        <img src="img/logo.jpg" alt="" width="140px" />
+      </div>
     </header>
-    
-    <section class="content">
-        <h2>Quem é Juliana Orsini</h2>
-        <p>Este é o meu site pessoal. Aqui você irá conhecer um pouco mais da minha vida pessoal e profissional.</p>
-        <p>Meu nome é Juliana, tenho 39 anos, sou casada a 23 anos, tenho um filho de 20 anos</p>
-        <p>Sou formada em Administração de Empresa, tenho MBA em Gestão de Vendas e Trade Marketing</p>
-        <p>Minha maior paixão é viajar, conhecer novas culturas, gastronomia local ,amo montar meus roteiros e organizar minhas viagens, gosto também de cozinhar, costurar.</p>
-        <p>Meus pais são separados, tenho 02 irmãos, sou a mais velhas dos irmãos, amo muito estar com minha família, que é o meu bem mais precioso.</p>
-      </section>
     <main>
-        <h2>Conheça As Aventuras da Jú</h2>
-        <div id="conteudo-home">
-          <div class="regiao">
-            <a href="norte.html" title="Dubai">
-              <img src="img/dubai.jpg.jpg" width="239" />
-            </a>
-            <p>Norte</p>
-          </div>
-          <div class="regiao">
-            <a href="nordeste.html" title="Região Nordeste">
-              <img src="imagens/nordeste-jalapao.jpg" width="239" />
-            </a>
-            <p>Nordeste</p>
-          </div>
-          <div class="regiao">
-            <a href="centro-oeste.html" title="Região Centro-Oeste">
-              <img src="imagens/centro-oeste-bonito.jpg" width="239" />
-            </a>
-            <p>Centro-Oeste</p>
-          </div>
-          <div class="regiao">
-            <a href="sudeste.html" title="Região Sudeste">
-              <img src="imagens/sudeste-buzios.jpg" width="239" />
-            </a>
-            <p>Sudeste</p>
-          </div>
-          <div class="regiao">
-            <a href="sul.html" title="Região Sul">
-              <img src="./imagens/sul-florianopolis.jpg" width="239" />
-            </a>
-            <p>Sul</p>
-          </div>
+      <h2>Conheça Juliana Orsini</h2>
+      <div id="conteudo-home">
+        <div class="regiao">
+          <a href="norte.html" title="Sobre Mim">
+            <img src="imagens/norte-belem.jpg" width="200" />
+          </a>
+          <p>Norte</p>
         </div>
-      </main>
+        <div class="regiao">
+          <a href="nordeste.html" title="Profissional">
+            <img src="imagens/nordeste-jalapao.jpg" width="200" />
+          </a>
+          <p>Nordeste</p>
+        </div>
+        <div class="regiao">
+          <a href="Viagens.html" title="Viagens">0
+            <img src="img/dubai.jpg.jpg" width="150" />
+          </a>
+          <p>Viagens</p>
+        </div>
+        </div>
+      </div>
+    </main>
     <footer>
-        <p>&copy; 2023 Meu Site Pessoal</p>
-        
+      <p>Desenvolvido por Júnior Gonçalves</p>
     </footer>
-</body>
+  </body>
 </html>
-
