--- a/Viagens.html
+++ b/Viagens.html
@@ -1,117 +1,207 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="logo.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="estiloViagens.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <title>Meu Site Pessoal</title>
+  <meta charset="UTF-8" />
+  <meta name="author" content="Samuel Orsini" />
+  <meta name="description" content="Descrição do conteúdo" />
+  <link rel="stylesheet" href="./css/index.css" />
+  <link rel="icon" href="./img/logo.jpg" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;900&display=swap"
+    rel="stylesheet" />
+
+  <title>Viagens</title>
 </head>
 
 <body>
-    <div id="container">
-        <div id="content-wrap">
-
-            <header>
-                <img src="img/headerHall.jpg" alt="Minha Foto" width="200px" class="rounded-circle">
-                <div class="header-overlay">
-                    <a href="index.html" style="text-decoration: none; color: black;">
-                        <h1>Juliana Orsini</h1>
-                    </a>
-                </div>
-            </header>
-
-            <div class="text-center mt-5">
-                <h1><strong>UM POUCO SOBRE AS MINHAS VIAGENS</strong></h1>
-                <h2 class="mt-4">Italia</h2>
-            </div>
-
-            <main>
-                <div class="link-div">
-                    <img src="img/sobremim/juTonoli.jpg" alt="" width="250px"
-                        class="rounded-circle border border-4 border-info">
-                    <p>Aqui voce coloca o texto</p>
-                </div>
-                <div class="link-div">
-                    <img src="img/sobremim/juTonoli2.jpg" alt="" width="250px"
-                        class="border border-4 border-info rounded">
-                    <p>Aqui voce coloca o texto</p>
-                </div>
-                <div class="link-div">
-                    <img src="img/sobremim/samuBrincando.jpg" alt="" width="400px"
-                        class="border border-4 border-info rounded-circle">
-                    <p>Aqui voce coloca o texto</p>
-                </div>
-
-                <div class="link-div">
-                    <img src="img/sobremim/fornoTonoli.jpg" alt="" width="300px"
-                        class="border border-4 border-info rounded">
-                    <p>Aqui voce coloca o texto</p>
-                </div>
-                <div class="link-div">
-                    <img src="img/sobremim/hallsatt.jpg" alt="" width="400px"
-                        class="border border-4 border-info rounded-circle">
-                    <p>Aqui voce coloca o texto</p>
-                </div>
-                <div class="link-div">
-                    <img src="img/sobremim/Tonoli.jpg" alt="" width="300px" class="border border-4 border-info rounded">
-                    <p>Aqui voce coloca o texto</p>
-                </div>
-
-            </main>
-
-            <h2 id="alemanha">Alemanha</h2>
-            <div id="alemanhaDiv">
-
-
-                <div class="link-div">
-                    <img src="img/sobremim/Tonoli.jpg" alt="" width="300px" class="border border-4 border-info rounded">
-                    <p>Aqui voce coloca o texto</p>
-                </div>
-
-                <div class="link-div">
-                    <img src="img/sobremim/Tonoli.jpg" alt="" width="300px" class="border border-4 border-info rounded">
-                    <p>Aqui voce coloca o texto</p>
-                </div>
-
-                <div class="link-div">
-                    <img src="img/sobremim/Tonoli.jpg" alt="" width="300px" class="border border-4 border-info rounded">
-                    <p>Aqui voce coloca o texto</p>
-                </div>
-            </div>
-
-
-            <h2 id="republicaTcheca">Republica Tcheca</h2>
-            <div id="republicaTchecaDiv">
-
-                <div class="link-div">
-                    <img src="img/sobremim/Tonoli.jpg" alt="" width="300px" class="border border-4 border-info rounded">
-                    <p>Aqui voce coloca o texto</p>
-                </div>
-
-                <div class="link-div">
-                    <img src="img/sobremim/Tonoli.jpg" alt="" width="300px" class="border border-4 border-info rounded">
-                    <p>Aqui voce coloca o texto</p>
-                </div>
-
-                <div class="link-div">
-                    <img src="img/sobremim/Tonoli.jpg" alt="" width="300px" class="border border-4 border-info rounded">
-                    <p>Aqui voce coloca o texto</p>
-                </div>
-            </div>
-
-        </div>
-        <footer id="footer">
-            <p>Desenvolvido pela As Aventuras da Ju</p>
-        </footer>
+  <header>
+    <div id="topo">
+      <nav>
+        <li>
+          <a class="links" href="index.html"> Home </a>
+        </li>
+        <li>
+          <a class="links" href="sobremim.html"> Sobre mim </a>
+        </li>
+        <li>
+          <a class="links" href="profissional.html"> Profissional </a>
+        </li>
+        <li>
+          <a class="links" href="viagens.html">Viagens</a>
+        </li>
+      </nav>
     </div>
+  </header>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
+  <main>
+    <div id="conteudo-interno">
+
+      <div id="conteudo-padrao-2">
+        <h2 class="titulo-2">Viagens</h2>
+        <img class="img-no-texto-viagens" src="img/logo.jpg" alt="Logo" title="As Aventuras da Ju" />
+      </div>
+
+      <div id="conteudo-secundario">
+        <p class="texto-secundario">
+          Paixão por viagem (as Aventuras da Jú)
+          Me recordo que quando estava na 5ºsérie minha professora Sueli da aula de ciência havia realizado uma viagem
+          para Foz do Iguaçu e ela contando os detalhes de como era as Cataratas , em fiquei imaginado e ali nasceu um
+          sonho de um dia viajar , mesmo sem saber direito como era uma viagem.</p>
+          
+          <p class="texto-secundario">Quando fui morar com meu esposo, todos os anos íamos ao Santuário de Nossa Senhora Aparecida, e na minha
+          infância com meus pais nunca tinha viajado , então era um sonho viajar, adorava, e dessas viagens foi
+          despertando em mim o sonho de conhecer o mar , então em 13/02/2000 montei minha primeira excursão para praia,
+          foi de bate e volta, mas pensa numa viagem busca pé, só família e alguns amigos , foi uma semana chuvosa e
+          naquele dia saímos da nossa cidade em baixo de chuva, mas na praia melhorou, mas foi um passeio inesquecível,
+          depois vieram muitas outras, mas foi nessa com certeza que descobri que amo viajar.</p>
+          <p class="texto-secundario">Desde da minha primeira viagem a Aparecida em 1998 e depois da primeira viagem de avião em 2011 , detalhe todo
+          roteiro planejado por mim, a vontade de viajar nunca mais acabou, e os investimentos em viagem foram
+          aumentando, sinto muito prazer em organizar as viagens nas nossas férias, gosto muito, é muito amor e
+          dedicação envolvido , sinto que é uma paixão , me dedico muito no dia a dia nas horas vagas em pesquisar todo
+          tipo de viagem, esse momento que passamos nós três juntos(eu, meu esposo e meu filho) não tem preço, pois
+          passamos mais tempo trabalhando, é vejo que o maior legado que podemos deixar para nosso filho, levar ele para
+          conhecer novas culturas, gastronomia , ninguém volta o mesmo depois de uma viagem, pois é um desafio sair da
+          sua zona de conforto, e quando se tem pouco dinheiro é mais ainda, pois após decidirmos onde queremos ir, há
+          todo o planejamento financeiro para conquistar a viagem sonhada, a logística , conhecer o destino, no começo
+          íamos para bate volta, depois final de semana ou feriado, depois as viagens de avião foram para 04 dias,
+          depois 07 dias e atualmente conseguimos 10 dias e as viagens internacionais são o grande desafio , mas quando
+          se tem objetivo conseguimos, tem o desafio da língua local, não sei descrever a satisfação e orgulho que tenho
+          destas conquistas.</p>
+
+          <p class="texto-secundario">
+          Em ordem cronológica nossas viagens foram:</p>
+          <ul class="texto-secundario">
+            <li>Dezembro de 1998 a 2006 Aparecida (bate e volta)</li>
+            <li>Fevereiro 2000 Praia Grande(12/02/2000-bate e volta)</li>
+            <li>Outubro 2000 Praia Ubatuba (14/10/2000-final de semana)</li>
+            <li>Fevereiro 2001-Praia Grande(bate e volta)</li>
+            <li>Novembro 2001- Caldas (11/11/2001 Poços de bate e volta)</li>
+            <li>Abril 2001-Praia Ubatuba(13,14 e 15/04/2001 Páscoa)</li>
+            <li>Março 2002-Praia Ubatuba (29,30 e 31/03/2002-Páscoa)</li>
+            <li>Setembro 2002-Praia Grande (bate volta, essa viagem foi muito marcante pois levamos dois senhores o Sr. Joaquim e Sr. Chico amigos nosso pela primeira vez na praia, foi muito gratificante ver a felicidade deles de
+              conhecer o mar).</li>
+            <li>Dezembro 2004-Praia Ubatuba –(24,25,26 e 27 /12/2004 Natal )</li>
+            <li>Março 2009 -Praia Ubatuba (feriado)</li>
+            <li>Janeiro 2012 – Curitiba</li>
+            <li>Dezembro 2012 Guarujá</li>
+            <li>Janeiro 2014 – Foz do Iguaçu</li>
+            <li>Abril 2014 -Orlando-Disney (Ganhei da Empresa, mas fui só sem esposo e filho)</li>
+            <li>Outubro 2014-Ilha Bela</li>
+            <li>Janeiro 2015 -Gramado, Canela e Porto Alegre</li>
+            <li>Novembro 2015 -Ubatuba</li>
+            <li>Maio 2016-Balneário de Camboriú, Beto Carreiro, Bombinhas (Feriado)</li>
+            <li>Setembro 2016 Final de Semana em São Paulo</li>
+            <li>Novembro 2016-Machu Picchu</li>
+            <li>Março 2017-Rio de Janeiro (Final de semana, primeira viagem de Avião da minha cunhada Neuza e da minha melhor amiga Maria Helena)</li>
+            <li>Novembro 2017-Portugal (Lisboa, Sintra, Porto, Fátima, Óbidos, Évora, Nazaré e Golegã)</li>
+            <li>Outubro 2018 - Itália (Veneza, Florença,Pisa , Roma ,Vaticano e Pompéia)</li>
+            <li>Outubro /Novembro 2019 – Alemanha (Munique,Fussen, Dresden e Berlin) – Áustria (Salzburgo ,Hallstatt)
+              -Republica Tcheca (cesky krumlov , Praga) - Itália (Roma)</li>
+            <li>Novembro 2020 – Porto de Galinhas</li>
+            <li>Novembro 2021- Dubai e Abu Dhabi</li>
+          </ul>
+
+          <p class="texto-secundario">Quero conhecer o maior número de lugares que for possível, agradeço todos os dias por realizar este objetivo,
+          claro que é muito dedicação de todos em casa, pois podemos dizer que somos muito econômicos de forma a
+          garantir nossa viagem de férias ou feriado.</p>
+        </p>
+      </div>
+
+      <!-- TESTTSE -->
+      <div class="slideshow-container">
+        <div class="mySlides fade">
+          <img class="img-main" src="img/headerHall.jpg" style="width: 100%" />
+        </div>
+
+        <div class="mySlides fade">
+          <img class="img-main" src="img/headerBerlim.jpg" style="width: 100%" />
+        </div>
+
+        <div class="mySlides fade">
+          <img class="img-main" src="./img/viagens/juVenezaPonte.jpg" style="width: 100%" />
+        </div>
+      </div>
+      <br />
+
+      <div style="text-align: center">
+        <span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
+      </div>
+
+      <!-- testetst -->
+
+      <div class="container text-center">
+        <h2 class="titulo-2">Itália</h2>
+        <div class="row">
+          <div class="col">
+            <img class="img-no-texto-viagens" src="img/viagens/venezaPonte.jpg" alt="Veneza" title="Veneza" />
+          </div>
+          <div class="col">
+            <img class="img-no-texto-viagens" src="img/viagens/florencaPonte.jpg" alt="Florenca" title="Florença" />
+          </div>
+          <div class="col">
+            <img class="img-no-texto-viagens" src="img/viagens/vesuvio.jpg" alt="Vesuvio" title="Vesuvio" />
+          </div>
+        </div>
+        <br>
+
+        <h2 class="titulo-2">Alemanha</h2>
+        <div class="row">
+          <div class="col">
+            <img class="img-no-texto-viagens" src="img/viagens/joelhoPorcoAlemanha.jpg" alt="joelhoPorcoAlemanha"
+              title="Joelho de Porco Alemanha" />
+          </div>
+          <div class="col">
+            <img class="img-no-texto-viagens" src="img/viagens/campoConcentracao.jpg" alt="campoConcentracao"
+              title="Campo de Concentração Dahau" />
+          </div>
+          <div class="col">
+            <img class="img-no-texto-viagens" src="img/viagens/casteloFussen.jpg" alt="casteloFussen"
+              title="Castelo Fussen" />
+          </div>
+        </div>
+        <br>
+
+        <h2 class="titulo-2">República Tcheca</h2>
+        <div class="row">
+          <div class="col">
+            <img class="img-no-texto-viagens" src="img/viagens/juPraha.jpg" alt="Praga" title="Praga" />
+          </div>
+          <div class="col">
+            <img class="img-no-texto-viagens" src="img/viagens/juRelogio.jpg" alt="relogio"
+              title="Relógio Astronômico" />
+          </div>
+          <div class="col">
+            <img class="img-no-texto-viagens" src="img/viagens/sorveteCone.jpg" alt="sorveteCone"
+              title="Sorevete no Cone" />
+          </div>
+        </div>
+
+        <h2 class="titulo-2">Áustria</h2>
+        <div class="row">
+          <div class="col">
+            <img class="img-no-texto-viagens" src="img/viagens/hallsatt.jpg" alt="hallsatt" title="hallsatt" />
+          </div>
+          <div class="col">
+            <img class="img-no-texto-viagens" src="img/viagens/hallsatt2.jpg" alt="mina" title="Mina de Sal" />
+          </div>
+          <div class="col">
+            <img class="img-no-texto-viagens" src="img/viagens/hallsatt3.jpg" alt="lago" title="Lago Hallsatt" />
+          </div>
+        </div>
+      </div>
+
+
+  </main>
+
+  <footer id="footer-viagens">
+    <strong>Desenvolvido por Juliana Orsini</strong>
+  </footer>
+
+  <script src="./js/slideshow.js"></script>
 </body>
 
 </html>
