--- a/index.html
+++ b/index.html
@@ -1,44 +1,81 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilo.css">
-    <link rel="shortcut icon" href="logo.jpg" type="image/x-icon">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <title>Meu Site Pessoal</title>
-</head>
-<body>
+<html lang="PT-BR">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="author" content="Samuel Orsini" />
+    <meta name="description" content="Descrição do conteúdo" />
+    <link rel="stylesheet" href="./css/index.css" />
+    <link rel="icon" href="img/logo.jpg" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;900&display=swap"
+      rel="stylesheet"
+    />
+
+    <title>Site pessoal</title>
+  </head>
+
+  <body>
     <header>
-        <img src="img/viagens/pompeia.jpg" alt="Minha Foto" width="200px" class="rounded-circle">
-        <div class="header-overlay">
-            <a href="index.html" style="text-decoration: none; color: black;">      
-        </div>
+      <div id="topo">
+        <nav>
+          <li>
+            <a class="links" href="index.html"> Home </a>
+          </li>
+          <li>
+            <a class="links" href="sobremim.html"> Sobre mim </a>
+          </li>
+          <li>
+            <a class="links" href="profissional.html"> Profissional </a>
+          </li>
+          <li>
+            <a class="links" href="viagens.html">Viagens</a>
+          </li>
+        </nav>
+      </div>
     </header>
+
     <main>
-        <div class="link-div">
-            <a href="sobreMim.html">
-                <img src="img/sobremim/juPequena.jpg" alt="Imagem 1" width="400px" class="rounded-circle border border-4 border-info">
-                <p>Sobre mim</p>
-            </a>
+      <div id="topo">
+        <div class="slideshow-container">
+          <div class="mySlides fade">
+            <img
+              class="img-main"
+              src="img/headerHall.jpg"
+              style="width: 100%"
+            />
+          </div>
+
+          <div class="mySlides fade">
+            <img
+              class="img-main"
+              src="img/headerBerlim.jpg"
+              style="width: 100%"
+            />
+          </div>
+
+          <div class="mySlides fade">
+            <img
+              class="img-main"
+              src="./img/viagens/juVenezaPonte.jpg"
+              style="width: 100%"
+            />
+          </div>
         </div>
-        <div class="link-div">
-            <a href="profissional.html">
-                <img src="img/profissional/cristalia.jpg" alt="Imagem 2" width="400px" class="rounded-circle border border-4 border-info">
-                <p>Profissional</p>
-            </a>
+        <br />
+
+        <div style="text-align: center">
+          <span class="dot"></span>
+          <span class="dot"></span>
+          <span class="dot"></span>
         </div>
-        <div class="link-div">
-            <a href="viagens.html">
-                <img src="img/headerBerlim.jpg" alt="Imagem 3" width="400px" class="rounded-circle border border-4 border-info">
-                <p>Viagens</p>
-            </a>
-        </div>
+      </div>
+      <script src="./js/slideshow.js"></script>
     </main>
 
     <footer>
-        <p>Desenvolvido pela As Aventuras da Ju</p>
+      <strong>Desenvolvido por Juliana Orsini</strong>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-</body>
+  </body>
 </html>
