--- a/sobreMim.html
+++ b/sobreMim.html
@@ -1,74 +1,88 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="logo.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="estiloSobreMim.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <title>Meu Site Pessoal</title>
+  <meta charset="UTF-8" />
+  <meta name="author" content="Samuel Orsini" />
+  <meta name="description" content="Descrição do conteúdo" />
+  <link rel="stylesheet" href="./css/index.css" />
+  <link rel="icon" href="./img/logo.jpg" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;900&display=swap"
+    rel="stylesheet" />
+
+  <title>Sobre mim</title>
 </head>
 
 <body>
-    <div id="container">
-        <div id="content-wrap">
-
-            <header>
-                <img src="img/headerHall.jpg" alt="Minha Foto" width="200px" class="rounded-circle">
-                <div class="header-overlay">
-                    <a href="index.html" style="text-decoration: none; color: black;"><h1>Juliana Orsini</h1></a>
-                </div>
-            </header>
-
-            <div class="text-center mt-5">
-                <h1><strong>UM POUCO SOBRE A JULIANA</strong></h1>
-            </div>
-
-            <main>
-
-
-                <div class="link-div">
-                    <img src="img/sobremim/juTonoli.jpg" alt="" width="250px"
-                        class="rounded-circle border border-4 border-info">
-                    <p>Aqui voce coloca o texto</p>
-                </div>
-                <div class="link-div">
-                    <img src="img/sobremim/juPequena.jpg" alt="" width="250px"
-                        class="border border-4 border-info rounded">
-                    <p>Aqui voce coloca o texto</p>
-                </div>
-                <div class="link-div">
-                    <img src="img/sobremim/samuBrincando.jpg" alt="" width="400px"
-                        class="border border-4 border-info rounded-circle">
-                    <p>Aqui voce coloca o texto</p>
-                </div>
-                <div class="link-div">
-                    <img src="img/sobremim/juIsabel.jpg" alt="" width="300px"
-                        class="border border-4 border-info rounded">
-                    <p>Aqui voce coloca o texto</p>
-                </div>
-                <div class="link-div">
-                    <img src="img/sobremim/hallsatt.jpg" alt="" width="400px" class="border border-4 border-info rounded-circle">
-                    <p>Aqui voce coloca o texto</p>
-                </div>
-                <div class="link-div">
-                    <img src="img/sobremim/igreja.jpg" alt="" width="300px" class="border border-4 border-info rounded">
-                    <p>Aqui voce coloca o texto</p>
-                </div>
-
-            </main>
-
-            <footer id="footer">
-                <p>Desenvolvido pela As Aventuras da Ju</p>
-            </footer>
-        </div>
+  <header>
+    <div id="topo">
+      <nav>
+        <li>
+          <a class="links" href="index.html"> Home </a>
+        </li>
+        <li>
+          <a class="links" href="sobremim.html"> Sobre mim </a>
+        </li>
+        <li>
+          <a class="links" href="profissional.html"> Profissional </a>
+        </li>
+        <li>
+          <a class="links" href="viagens.html">Viagens</a>
+        </li>
+      </nav>
     </div>
+  </header>
+  <main>
+    <div id="conteudo-interno">
+      <div id="conteudo-secundario">
+        <aside>
+          <img class="img-no-texto" src="img/sobremim/juPequena.jpg" alt="julianaPequena" title="Julina Pequena" />
+        </aside>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-            crossorigin="anonymous"></script>
+        <div class="aside-conteudo">
+          <h3 class="subtitulos">1 - Juliana Orsini</h3>
+
+          <p class="texto-secundario">
+            Meu nome é Juliana, tenho 39 anos, sou casada a 23 anos, tenho um filho de 20 anos, sou formada em
+            Administração de Empresa, tenho MBA em Gestão de Vendas e Trade Marketing .
+          </p>
+        </div>
+
+        <aside>
+          <img class="img-no-texto" src="img/viagens/juCastelo.jpg" alt="castelo" title="Castelo Alemão" />
+        </aside>
+
+        <div class="aside-conteudo">
+          <h3 class="subtitulos2">2 - Paixão</h3>
+
+          <p class="texto-secundario">
+            Minha maior paixão é viajar, conhecer novas culturas, gastronomia local ,amo montar meus roteiros e
+            organizar minhas viagens, gosto também de cozinhar, costurar.
+
+          </p>
+        </div>
+
+        <aside>
+          <img class="img-no-texto" src="img/sobremim/juFamilia.jpg" alt="familia Ju" title="Familia Ju" />
+        </aside>
+
+        <div class="aside-conteudo">
+          <h3 class="subtitulos2">3 - Família</h3>
+
+          <p class="texto-secundario">
+            Meus pais são separados, tenho 02 irmãos, sou a mais velhas dos irmãos, amo muito estar com minha família,
+            que é o meu bem mais precioso.
+          </p>
+        </div>
+      </div>
+    </div>
+  </main>
+
+  <footer id="footer-sobremim">
+    <strong>Desenvolvido por Juliana Orsini</strong>
+  </footer>
 </body>
 
 </html>
